Add Background image and links
Added Background image
change font color
Add social media links and images

--- a/index.html
+++ b/index.html
@@ -3,13 +3,30 @@
     <head>
         <meta charset="UTF -8">
         <meta name = "viewport" content="width= device-width, initial-Scle =1.0">
-        <title> my website</title>
+        <title> Meine Webseite</title>
     </head>
-
-    <body>
+     <!--Du ist sohe Schon und Stark-->
+    <body style=" background-size:cover; background-image: url('https://i.imgflip.com/6z9kbk.png'); ">
+        <div style="color: white;text-align: center;">
         <h1> hallo, ich bin João </h1>
-        <h1> ich habe 22 jahre, mag spielt Videospiel, mag Fußball, ich spreche Portugiesisch, englisch, und ich lernen deutsch. Das ist ein praktische ubung. ich schreiben das fast alleine  </h1>
-
+        <p> 
+            <i>
+                <strong>
+                    ich habe 22 jahre, mag spielt Videospiel, mag Fußball, ich spreche Portugiesisch, englisch, und ich 
+                    lernen deutsch. Das ist ein praktische ubung. ich schreiben das fast alleine  
+                </strong>
+            </i> 
+        </p>
+        </div>
+        <div style="color: white;">
+            <H1>MEIN SOZIALEN MEDIEN</H1>
+            <a href="https://www.instagram.com/7pereira_joao/">
+              <img src="https://img.freepik.com/premium-photo/round-instagram-logo-isolated-white-background_469489-1037.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1709424000&semt=ais" alt="" >
+            </a>
+            <a href="https://twitter.com/irlshikamaru">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/512px-Logo_of_Twitter.svg.png" alt="" >
+              </a>
+        </div>
     </body>
 
 </html>
