--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
     <head>
         <meta charset="UTF -8">
         <meta name = "viewport" content="width= device-width, initial-Scle =1.0">
+        <link rel= "stylesheet" href="Stylesheet.css" > 
         <title> Meine Webseite</title>
     </head>
      <!--Du ist sohe Schon und Stark-->
-    <body style=" background-size:cover; background-image: url('https://i.imgflip.com/6z9kbk.png'); ">
-        <div style="color: white;text-align: center;">
-        <h1> hallo, ich bin João </h1>
-        <p> 
-            <i>
+    <body class="body" >
+      <div class="image">
+        <div class="aboutme">
+         <h1> hallo, ich bin João </h1>
+         <p> 
+             <i>
                 <strong>
-                    ich habe 22 jahre, mag spielt Videospiel, mag Fußball, ich spreche Portugiesisch, englisch, und ich 
-                    lernen deutsch. Das ist ein praktische ubung. ich schreiben das fast alleine  
+                ich habe 22 jahre, mag spielt Videospiel, mag Fußball, ich spreche Portugiesisch, englisch, und ich 
+                lernen deutsch. Das ist ein praktische ubung. ich schreiben das fast alleine  
                 </strong>
-            </i> 
-        </p>
+             </i> 
+         </p>
         </div>
-        <div style="color: white;">
+        <div class="medias">
             <H1>MEIN SOZIALEN MEDIEN</H1>
             <a href="https://www.instagram.com/7pereira_joao/">
-              <img src="https://img.freepik.com/premium-photo/round-instagram-logo-isolated-white-background_469489-1037.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1709424000&semt=ais" alt="" >
+                <img src="https://img.freepik.com/premium-photo/round-instagram-logo-isolated-white-background_469489-1037.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1709424000&semt=ais" alt="" >
             </a>
             <a href="https://twitter.com/irlshikamaru">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/512px-Logo_of_Twitter.svg.png" alt="" >
-              </a>
+            </a>
+        </div>
         </div>
     </body>
 
