--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel= "stylesheet" href="Stylesheet.css" > 
         <title> Meine Webseite</title>
     </head>
-     <!--Du ist sohe Schon und Stark-->
+     <!--Du bist sehr Schon und Stark-->
     <body class="body" >
       <div class="image">
         <div class="aboutme">
@@ -15,7 +15,7 @@
              <i>
                 <strong>
                 ich habe 22 jahre, mag spielt Videospiel, mag Fußball, ich spreche Portugiesisch, englisch, und ich 
-                lernen deutsch. Das ist ein praktische ubung. ich schreiben das fast alleine  
+                lernen deutsch. Das ist ein praktische ubung. ich schreibe das fast alleine  
                 </strong>
              </i> 
          </p>
