--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html   >
     <head>
         <meta charset="UTF -8">
         <meta name = "viewport" content="width= device-width, initial-Scle =1.0">
+        <!-- <link rel= "stylesheet" href="Stylesheet.css" >  -->
         <link rel= "stylesheet" href="Stylesheet.css" > 
         <title> Meine Webseite</title>
     </head>
@@ -28,8 +29,12 @@
             <a href="https://twitter.com/irlshikamaru">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/512px-Logo_of_Twitter.svg.png" alt="" >
             </a>
+            <H1>LAMP(click lamp)</H1>
+            <a href="Lampada.html">
+                <img src="https://i.postimg.cc/6QyTynzr/bulb-on.png"" alt="" >
         </div>
         </div>
+        <script src="script.js"></script>
     </body>
 
 </html>
